# task3.1

./: CMakeLists.txt  Lab1.cpp  Lab1.h  Lab1_main.cpp  README.md
